# hugodemugo

./: .gitignore  LICENSE  README.md  agent.py  configs.py  game.py  learner.py  pyproject.toml  qvalues.json  renderer.py  requirements.txt  results.txt  snake_game.py  state_representations.py  train.ps1
highscores/: highscore1.json  highscore12.json  highscore14.json  highscore16.json  highscore2.json  highscore20.json  highscore25.json  highscore3.json  highscore4.json  highscore5.json  highscore59.json  highscore7.json  highscore9.json
