[project]
name = "hugodemugo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
    "tqdm>=4.66.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tyro>=0.8.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
]
